--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,7 +69,7 @@ post_class: post-template
                 </figure>
                 <section class="author">
                     <!-- Author Name -->
-                    <h4> {{ site.author }} </h4>
+                    <h4> <a href="https://twitter.com/{{ site.twitter }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter }}</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> {{ site.author }} </h4>
                     <!-- Author Bio -->
                     <p>
                         {{ site.bio }}
