port in prior content and update highlight colors

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -16,8 +16,8 @@
 	.gh { color: #999999 } /* Generic.Heading */
 	.gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
 	.gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
-	.go { color: #888888 } /* Generic.Output */
-	.gp { color: #555555 } /* Generic.Prompt */
+	.go { color: #d1d1d1 } /* Generic.Output */
+	.gp { color: #7ed63b } /* Generic.Prompt */
 	.gs { font-weight: bold } /* Generic.Strong */
 	.gu { color: #aaaaaa } /* Generic.Subheading */
 	.gt { color: #aa0000 } /* Generic.Traceback */
